--- a/.gitignore
+++ b/.gitignore
@@ -129,11 +129,11 @@ ENV/
 env.bak/
 venv.bak/
 
-# Spyder project settings
+# Spyder project settings_window
 .spyderproject
 .spyproject
 
-# Rope project settings
+# Rope project settings_window
 .ropeproject
 
 # mkdocs documentation
